--- a/PaginaWeb.html
+++ b/PaginaWeb.html
@@ -24,12 +24,16 @@
     <a href="https://www.epiclab.itam.mx/preguntas-frecuentes">Preguntas Frecuentes</a>
     <a href="https://www.epicplus.itam.mx/">epic +</a>
   </ul>
-
+<main>
+    <section id="ruta_epica">
   <h1>Ruta Épica</h1>
   <button>Conoce mas</button>
 <br>
 <img src='Epiclab.png' alt=“Foto” width="300"/>
 
+</section>
+
+    <section id="sLogan">
 <h2>  E  P  I  C  </h2>
 <h3>Emprender + Progresar + Innovar + Crear</h3>
 <strong>
@@ -38,6 +42,8 @@
         En el EPIC Lab estamos construyendo una radiografía de todas las startups creadas por estudiantes y exalumnos del ITAM. Si estás emprendiendo, queremos conocerte, apoyarte y conectarte con nuestra red
     </p>
 <button>Queremos conocerte</button>
+</section>
+<section id="queEs">
        <h4>¿Qué es el EPIC Lab?</h4>
     
     <p>
@@ -51,10 +57,11 @@
 <img src='ee.jpg' alt=“Foto” width="300"/>
 <img src='Imagen3.png' alt=“Foto” width="300"/>
 <img src='Imagen4.png' alt=“Foto” width="300"/>
-
+    </section>
+<section id="contacto">
 <p>CONTACTANOS</p>
-<p> 01 55 5628 4000 Ext. 3445​</p>
-<p>Río Hondo 1, Progreso Tizapán, 01080 Alvaro Obregón, CDMX</p>
+<p> Telefono. 01 55 5628 4000 Ext. 3445​</p>
+<p>Direecion: Río Hondo 1, Progreso Tizapán, 01080 Alvaro Obregón, CDMX</p>
 
 <p> Si desea enviarnos un mensaje, puede llenar esta hoja de contacto:</p>
 
@@ -82,18 +89,6 @@
           autocomplete="off"
           required
         />
-
-        <!-- Mantener sesión iniciada -->
-        <div id="kmsiArea" style="display: none">
-          <input
-            type="checkbox"
-            name="Kmsi"
-            id="kmsiInput"
-            value="true"
-          />
-          <label for="kmsiInput">Mantener la sesión iniciada</label>
-        </div>
-
     
       <!-- Método de autenticación oculto -->
       <input
@@ -103,6 +98,7 @@
         id="optionForms"
       />
     </form>
-
+    </section>
+</main>
 </body>
 </html>
