Modifiqué artistsTarea.html con cambios de estilos

--- a/tareaSpotifyArtistas/artistsTarea.html
+++ b/tareaSpotifyArtistas/artistsTarea.html
@@ -13,7 +13,7 @@
     <script src="artists-profile.js" defer></script>
   </head>
   <body class="container mt-5">
-    <h1 class="h1 text-success">Spotify Info de Artistas</h1>
+    <h1 class="h1 .text-warning">Spotify Info de Artistas</h1>
     <div class="p-2 mt-3">
       <div class="input-group mb-3">
         <span class="input-group-text">Access token</span>
@@ -23,14 +23,14 @@
           id="token"
           placeholder="Pega aqui tu Bearer Token que es individual y unico"
         />
-        <select class="form-select bg-success-subtle" id="artist-preset">
+        <select class="form-select bg-warning" id="artist-preset">
               <option value="66CXWjxzNUsdJxJ2JdwvnR">Ariana Grande</option>
               <option value="1uNFoZAHBGtllmzznpCI3s">Justin Bieber</option>
               <option value="6eUKZXaKkcviH0Ku9w2n3V">Ed Sheeran</option>
               <option value="7dGJo4pcD2V6oG8kP0tJRR">Eminem</option>
               <option value="3TVXtAsR1Inumwj472S9r4">Drake</option>
             </select>
-        <button class="btn btn-success" id="fetch-btn">Get Artist Info</button>
+        <button class="btn btn-danger" id="fetch-btn">Get Artist Info</button>
       </div>
     </div>
 
